--- a/Super_Shop/src/main/webapp/WEB-INF/web.xml
+++ b/Super_Shop/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>jsf/test.xhtml</welcome-file>
+        <welcome-file>faces/jsf/products.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
